--- a/3.6-TLS-Basic/docker-compose.yml
+++ b/3.6-TLS-Basic/docker-compose.yml
@@ -27,6 +27,18 @@ services:
     depends_on:
       - redis 
 
+# Redis Cli
+  rediscli:
+    container_name: redis_cli
+    image: 
+      ${IMAGE_NAME}
+    restart: unless-stopped    
+    volumes:
+          - ./data:/data:rw
+    command: ["redis-server", "/etc/redis/redis.conf"]
+    depends_on:
+      - redis 
+
 #
 # EOF (2024/06/22)
 #
