--- a/3.7-TLS-Advanced/conf/primary/redis.conf
+++ b/3.7-TLS-Advanced/conf/primary/redis.conf
@@ -66,6 +66,18 @@ stop-writes-on-bgsave-error yes
 
 
 
+# By default, a Redis replica does not attempt to establish a TLS connection
+# with its master.
+#
+# Use the following directive to enable TLS on replication links.
+#
+tls-replication yes
+
+# By default, the Redis Cluster bus uses a plain TCP connection. To enable
+# TLS for the bus protocol, use the following directive:
+#
+tls-cluster yes
+
 # By default, TLS/SSL is disabled. To enable it, the "tls-port" configuration
 # directive can be used to define TLS-listening ports. To enable TLS on the
 # default port, use:
@@ -92,7 +104,17 @@ tls-ca-cert-file /usr/local/share/ca-certificates/ca.crt
 #
 # It is possible to disable authentication using this directive.
 #
-tls-auth-clients yes
+tls-auth-clients optional
+
+#
+# Sometimes certificates are issued with attributes that designate them as
+# client-only or server-only certificates. In that case it may be desired to use
+# different certificates for incoming (server) and outgoing (client)
+# connections. To do that, use the following directives:
+#
+tls-client-cert-file  /etc/ssl/clients/client.crt
+tls-client-key-file   /etc/ssl/clients/client.key
+#
 
 # Explicitly specify TLS versions to support. Allowed values are case insensitive
 # and include "TLSv1", "TLSv1.1", "TLSv1.2", "TLSv1.3" (OpenSSL >= 1.1.1) or
@@ -123,6 +145,8 @@ tls-prefer-server-ciphers no
 
 # 
 # redis-cli --tls --cacert /usr/local/share/ca-certificates/ca.crt 
+# 
+# redis-cli --tls --cacert /usr/local/share/ca-certificates/ca.crt --cert /etc/ssl/clients/client.crt --key /etc/ssl/clients/client.key 
 # 
 
 #
