--- a/3.7-TLS-Advanced/conf/replica/redis.conf
+++ b/3.7-TLS-Advanced/conf/replica/redis.conf
@@ -70,7 +70,7 @@ tls-port 6379
 # PEM formatted.
 #
 tls-cert-file /etc/ssl/redis.crt
-tls-key-file /etc/ssl/private/redis.key
+tls-key-file  /etc/ssl/private/redis.key
 
 # Configure a CA certificate(s) bundle or directory to authenticate TLS/SSL
 # clients and peers.  Redis requires an explicit configuration of at least one
@@ -84,7 +84,17 @@ tls-ca-cert-file /usr/local/share/ca-certificates/ca.crt
 #
 # It is possible to disable authentication using this directive.
 #
-tls-auth-clients yes
+tls-auth-clients optional
+
+#
+# Sometimes certificates are issued with attributes that designate them as
+# client-only or server-only certificates. In that case it may be desired to use
+# different certificates for incoming (server) and outgoing (client)
+# connections. To do that, use the following directives:
+#
+tls-client-cert-file  /etc/ssl/clients/client.crt
+tls-client-key-file   /etc/ssl/clients/client.key
+#
 
 # Explicitly specify TLS versions to support. Allowed values are case insensitive
 # and include "TLSv1", "TLSv1.1", "TLSv1.2", "TLSv1.3" (OpenSSL >= 1.1.1) or
