--- a/3.7-TLS-Advanced/docker-compose.yml
+++ b/3.7-TLS-Advanced/docker-compose.yml
@@ -58,59 +58,59 @@ services:
     depends_on:
         - primary
 
-# Sentinel 1
-  sentinel1:
-    image: ${IMAGE_NAME}
-    ports:
-      - 5000:6379
-    container_name: sentinel1
-    restart: unless-stopped    
-    volumes:
-      - ./5000:/usr/local/etc/redis:rw
-    command: ["redis-server", "/usr/local/etc/redis/redis.conf", "--sentinel"]
-    networks:
-      re_replication:
-        ipv4_address: 192.168.1.181
-    depends_on:
-        - primary
-        - replica1
-        - replica2
+# # Sentinel 1
+#   sentinel1:
+#     image: ${IMAGE_NAME}
+#     ports:
+#       - 5000:6379
+#     container_name: sentinel1
+#     restart: unless-stopped    
+#     volumes:
+#       - ./5000:/usr/local/etc/redis:rw
+#     command: ["redis-server", "/usr/local/etc/redis/redis.conf", "--sentinel"]
+#     networks:
+#       re_replication:
+#         ipv4_address: 192.168.1.181
+#     depends_on:
+#         - primary
+#         - replica1
+#         - replica2
 
-# Sentinel 2
-  sentinel2:
-    image: ${IMAGE_NAME}
-    ports:
-      - 5001:6379
-    container_name: sentinel2
-    restart: unless-stopped    
-    volumes:
-      - ./5001:/usr/local/etc/redis:rw
-    command: ["redis-server", "/usr/local/etc/redis/redis.conf", "--sentinel"]
-    networks:
-      re_replication:
-        ipv4_address: 192.168.1.182
-    depends_on:
-        - primary
-        - replica1
-        - replica2
+# # Sentinel 2
+#   sentinel2:
+#     image: ${IMAGE_NAME}
+#     ports:
+#       - 5001:6379
+#     container_name: sentinel2
+#     restart: unless-stopped    
+#     volumes:
+#       - ./5001:/usr/local/etc/redis:rw
+#     command: ["redis-server", "/usr/local/etc/redis/redis.conf", "--sentinel"]
+#     networks:
+#       re_replication:
+#         ipv4_address: 192.168.1.182
+#     depends_on:
+#         - primary
+#         - replica1
+#         - replica2
 
-# Sentinel 3
-  sentinel3:
-    image: ${IMAGE_NAME}
-    ports:
-      - 5002:6379
-    container_name: sentinel3
-    restart: unless-stopped    
-    volumes:
-      - ./5002:/usr/local/etc/redis:rw
-    command: ["redis-server", "/usr/local/etc/redis/redis.conf", "--sentinel"]
-    networks:
-      re_replication:
-        ipv4_address: 192.168.1.183
-    depends_on:
-        - primary
-        - replica1
-        - replica2
+# # Sentinel 3
+#   sentinel3:
+#     image: ${IMAGE_NAME}
+#     ports:
+#       - 5002:6379
+#     container_name: sentinel3
+#     restart: unless-stopped    
+#     volumes:
+#       - ./5002:/usr/local/etc/redis:rw
+#     command: ["redis-server", "/usr/local/etc/redis/redis.conf", "--sentinel"]
+#     networks:
+#       re_replication:
+#         ipv4_address: 192.168.1.183
+#     depends_on:
+#         - primary
+#         - replica1
+#         - replica2
 
 # Redis Insight
   redisinsight:
